involve LeanCloud with Pod

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 TWJieShuQuan.xcodeproj/project.xcworkspace/xcuserdata/
 TWJieShuQuan.xcodeproj/xcuserdata/
+
+Pods/
+TWJieShuQuan.xcodeproj/project.xcworkspace/xcshareddata/
+TWJieShuQuan.xcworkspace/
+
+
+
+
